www/assets/style.scss
/* ... */
@media (max-width: 980px) and (min-width: 705px)and (min-width: 705px){
  .view-more {
    text-align: center;
  }
}

.view-more:hover {
  color: #143ff4;
  background-color: white;
  border-radius: 4px;
}

.view-more h3 {
  margin: 0px auto;
  font-size: 16px;
}

@media (max-width: 704px) {
  .view-more h3 {
    font-size: 11px;
  }
}

.upcoming-events {
  background-color: #d9d9d9;
  width: 95%;
  height: auto;
  margin: 0 auto;
  margin-bottom: 150px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

@media (max-width: 704px) {
  .upcoming-events {
    display: block;
    text-align: left;
    padding: 5px;
    margin-bottom: 50px;
  }
}

@media (max-width: 1000px) and (min-width: 705px){
  .upcoming-events {
    width: 100%;
  }
}

.event {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  padding-left: 20px;
}

@media (max-width: 704px) {
  .event {
    margin: 0px;
    display: block;
    text-align: left;
  }
}

@media (max-width: 980px) and (min-width: 705px){
  .event {
    padding-left: 25px;
    height: 175px;

  }
}

.event-details {
  width: 390px;
  height: 110px;
  margin: 10px;
  padding-right: 10px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-bottom: -10px;
}

@media (max-width: 704px) {
  .event-details {
    margin-bottom: none;
    width: inherit;
    padding: none;
    display: inline;
    text-align: left;
  }
}

@media (max-width: 980px) and (min-width: 705px){
  .event-details {
    width: 265px;
  }
}

.event h3,h4 {
  margin: 0px;
}

@media (max-width: 980px) and (min-width: 705px){
  .event h3 {
    font-size: 20px;

  }
}

@media (max-width: 980px) and (min-width: 705px){
  .event h4 {
    font-size: 16px;
  }
}

.signup-button {
  color: white;
  background-color: #143ff4;
  width: 30%;
  margin: 20px;
  padding: 2px 20px 6px;
  text-decoration: none;
  border-radius: 4px;
  border-color: #143ff4;
  border-style: solid;
  cursor: pointer;
}

.signup-button h3 {
  font-size: 14px;
}

@media (max-width: 704px) {
  .signup-button {
    margin: 0px;
    margin-top: 20px;
    padding: none;
    font-size: 14px;
    width: 150px;
    text-align: center;
  }
}

@media (max-width: 980px) and (min-width: 705px){
  .signup-button h3 {
    font-size: 12px;
    text-align: center;
  }
}

.signup-button:hover,
.signup-button.active {
  color: #143ff4;
  background-color: white;
  border-radius: 4px;
}

.calendar-icon {
  background-image: url(/assets/images/calendar-icon.svg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  opacity: .75;
  width: 25%;
  height: 15vw;
  margin: 15px;
  margin-right: -12px;
}

@media (max-width: 704px) {
  .calendar-icon {
    display: none;
    margin: none;
    padding: none;
  }
}

@media (max-width: 800px) {
  .calendar-icon {
    display: none;
  }
}

#event-1, #event-3 {
  border-right-color: #4F4F4F;
  border-right-width: 3px;
  border-right-style: solid;
}

#event-1, #event-2 {
  border-bottom-color: #4F4F4F;
  border-bottom-width: 3px;
  border-bottom-style: solid;
  margin-top:10px;
}

@media (max-width: 704px) {
  #event-3, #event-4 {
    border: none;
    margin: none;
    padding: none;
    display: none;
  }
}

@media (max-width: 704px) {
  #event-1 {
    border-right: none;
  }
}

@media (max-width: 980px) and (min-width: 705px){
  #event-3, #event-4 {

  }
}

#subscribe-form {
  display: flex;
  width: 80%;
  margin-top: 20px;
}

@media (max-width: 704px) {
  #subscribe-form {
    flex-direction: column;
    justify-content: center;
  }
}

#email-field {
  margin: 10px;
  width: 70%;
}

@media (max-width: 704px) {
  #email-field {
    width: 90%;
  }
}

input {
    padding: 12px 20px;
    font-size: 16px;
}



input[type=text] {
    color: #a8a8a8;
    height: 25px;

}

.subscribe-button {
  width: 25%;
  display: block;
  text-align: center;
  background-color: #143ff4;
  color: white;
  border-radius: 4px;
  margin: 11px;
  padding: 5px;
  text-decoration: none;
  border-color: #143ff4;
  border-style: solid;
  cursor: pointer;
}

@media (max-width: 704px) {
  .subscribe-button {
    width: 90%;
  }
}

.subscribe-button h2 {
  margin: 0px auto;
  font-size: 3vw;
}

@media (max-width: 704px) {
  .subscribe-button h2 {
    font-size: 18px;
  }
}

.subscribe-button:hover {
  color: #143ff4;
  background-color: white;
  border-radius: 4px;
}

.form_div {
  display: none;
  width: 400px;
  height: 400px;
  background-color: white;
  border-radius: 10px;
  position: absolute;
  border: #143ff4 4px solid;
  text-align: center;
  z-index: 200;
}

.form_div h3 {
  text-align: center;
}

@media (max-width: 650px) {
  .form_div {
    position: absolute;
    margin: 0 auto;
    right: auto;
    top: 50px;
    right: 20px;
    width: 350px;
    background-color: white;
    align-items: center;
  }
}

h3#form {
  text-align: center;
}

.close {
  cursor: pointer;
  text-decoration: none;
  border-style: solid;
  color: #143ff4;
  background-color: white;
  border-color: #143ff4;
  border-style: solid;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 20px;
  height: 20px;
  top: 2px;
  right: 2px;
}

.close p {
  margin: 0px;
  padding: 1px;
  font-size: 16px;
}

.close:hover {
  color: white;
  background-color: #143ff4;
  border-color: #143ff4;
}

#dim-box {
    position:fixed;
    padding:0;
    margin:0;
    top:0;
    left:0;
    width: 100%;
    height: 100%;
    background:rgba(0,0,0,0.7);
    z-index: 100;
    display: none;
}



.info-section p {
  margin-left: 100px;
  margin-bottom: 20px;
}

@media (max-width: 704px) {
  .info-section p {
    margin-left: 0px;
    font-size: 18px;
  }
}

.info-section {
  margin-bottom: 150px;
}

@media (max-width: 704px) {
  .info-section {
    margin-bottom: 50px;
  }
}
/* ... */

